--- a/User/src/main/resources/application.yml
+++ b/User/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
         jdbc:
           time_zone: UTC
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
 token:
   SECRET_KEY: ${SECRET_KEY}
