--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -23,11 +23,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-webmvc:6.1.0'
+    // implementation 'org.springframework:spring-webmvc:6.1.0'
     implementation("org.springframework.cloud:spring-cloud-starter-gateway-server-webflux:5.0.0")
     
     // Service Discovery (Eureka Client)
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.1.1'
+    // implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.1.1'
 
 	// implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok:1.18.30'
