fix : gateway use only Netty, feat : proxy server

--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'java'
+    id 'java'
 }
 
 group = 'HooYah'
@@ -7,9 +7,9 @@ version = '0.0.1-SNAPSHOT'
 description = 'Demo project for Spring'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
 jar {
@@ -24,39 +24,33 @@ jar {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    
-    // 서명 파일 제외 (Invalid signature file digest 오류 방지)
-    exclude 'META-INF/*.SF'
-    exclude 'META-INF/*.DSA'
-    exclude 'META-INF/*.RSA'
+
+//    exclude 'META-INF/*.SF'
+//    exclude 'META-INF/*.DSA'
+//    exclude 'META-INF/*.RSA'
 }
 
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-    // implementation 'org.springframework:spring-webmvc:6.1.0'
-    implementation("org.springframework.cloud:spring-cloud-starter-gateway-server-webflux:5.0.0")
-    implementation 'org.springframework.cloud:spring-cloud-starter-config:5.0.0'
-    implementation "org.springframework:spring-core:5.0.0"
-    implementation "org.springframework:spring-web:5.0.0"
-    
-    // Service Discovery (Eureka Client)
-    // implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.1.1'
+    // https://mvnrepository.com/artifact/io.netty/netty-all
+    implementation("io.netty:netty-all:4.2.7.Final")
 
-	// implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    implementation 'org.yaml:snakeyaml:2.0'
+
+    implementation 'org.slf4j:slf4j-simple:2.0.17'
+    implementation 'org.slf4j:slf4j-api:2.0.17'
 
     // db
-    implementation 'org.springframework:spring-jdbc:6.1.14'
+    // implementation 'org.springframework:spring-jdbc:6.1.14'
     implementation 'com.zaxxer:HikariCP:5.1.0' // connection pool
 
     // mysql
