--- a/User/src/main/resources/application.yml
+++ b/User/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: Yacht
+    name: User
   config:
     import: optional:file:.env[.properties]
   datasource:
@@ -17,15 +17,8 @@ spring:
     properties:
       hibernate:
         show_sql: true
-        jdbc:
-          time_zone: UTC
     hibernate:
-      ddl-auto: create
-  data:
-    redis:
-      host: localhost
-      port: 6379
-      # password: your_password (비번 있으면 주석 해제)
+      ddl-auto: update
 
 token:
   SECRET_KEY: ${SECRET_KEY}
