--- a/Redis/build.gradle
+++ b/Redis/build.gradle
@@ -12,6 +12,17 @@ java {
 	}
 }
 
+sourceSets {
+    main {
+        java.srcDirs = ['src/main/java']
+        resources.srcDirs = ['src/main/resources']
+    }
+    test {
+        java.srcDirs = ['src/test/java']
+        resources.srcDirs = ['src/test/resources']
+    }
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -30,6 +41,10 @@ dependencies {
 
     // jackson
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
+    testImplementation 'org.mockito:mockito-core:5.17.0'
+    testImplementation 'org.assertj:assertj-core:3.27.4'
 }
 
 tasks.named('test') {
