fix! (Part): Common 적용
fix! (Part): common.jar 적용

--- a/part/src/main/resources/application.yml
+++ b/part/src/main/resources/application.yml
@@ -41,3 +41,10 @@ redis:
   module:
     yacht: Yacht
     user: User
+
+web-client:
+  gateway: http://localhost:8443
+
+  user-list: /user/proxy/user-list
+  yacht: /yacht/proxy/validate-yacht?yachtId=%d
+  yacht-user: /yacht/proxy/validate-user?yachtId=%d&userId=%d
