feat (Service): updateCalendarAndAlarm method
fix (application.yml): add web client uri :: calendar auto generate
feat (Service.updateClaendarAndAlarm): feat web client

--- a/Gateway/src/main/resources/servers.yml
+++ b/Gateway/src/main/resources/servers.yml
@@ -18,6 +18,16 @@ servers:
     count: 1
 
 modules:
+  - match-uri: /part/
+    services:
+      - name: part
+        server: mainServer
+        port: 9093
+    subs:
+      - name: part
+        server: sub
+        port: 8082
+
   - match-uri: /user/
     services:
       - name: user
