feat (Part.Test): feat service test
fix/refactor (Part.Service): fix bugs, return entity
feat  (Part.Test): feat service test

--- a/part/src/main/resources/application.yml
+++ b/part/src/main/resources/application.yml
@@ -48,3 +48,4 @@ web-client:
   user-list: /user/proxy/user-list
   yacht: /yacht/proxy/validate-yacht?yachtId=%d
   yacht-user: /yacht/proxy/validate-user?yachtId=%d&userId=%d
+  calendar-alarm-auto-generate: /calendar/proxy/
