--- a/Yacht/src/main/resources/application.yml
+++ b/Yacht/src/main/resources/application.yml
@@ -32,3 +32,9 @@ redis:
 
   module:
     user: USER
+
+web-client:
+  gateway: ${GATEWAY_URL}
+
+  user-list: /user/proxy/user-list
+  part-create: /part/proxy/create
