--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -25,9 +25,9 @@ jar {
     }
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
-//    exclude 'META-INF/*.SF'
-//    exclude 'META-INF/*.DSA'
-//    exclude 'META-INF/*.RSA'
+    exclude 'META-INF/*.SF'
+    exclude 'META-INF/*.DSA'
+    exclude 'META-INF/*.RSA'
 }
 
 configurations {
