--- a/part/build.gradle
+++ b/part/build.gradle
@@ -14,6 +14,16 @@ java {
 	}
 }
 
+bootJar {
+    enabled = true
+    archiveFileName = 'part.jar'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+jar {
+    enabled = false
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
