feat (Yacht): feat yacht api
feat (Yacht): feat yacht api
feat (part): feat addPartList proxy api, feat addRepairList
feat (Common): add new ErrorCode : Jackson Exception

--- a/part/src/main/resources/application.yml
+++ b/part/src/main/resources/application.yml
@@ -43,7 +43,7 @@ redis:
     user: User
 
 web-client:
-  gateway: http://localhost:8443
+  gateway: ${GATEWAY_URL}
 
   user-list: /user/proxy/user-list
   yacht: /yacht/proxy/validate-yacht?yachtId=%d
