--- a/common/build.gradle
+++ b/common/build.gradle
@@ -21,13 +21,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
-    testImplementation 'org.mockito:mockito-core:5.17.0'
-    testImplementation 'org.assertj:assertj-core:3.27.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
 
     // jackson
-    compileOnly 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1' // inject from outer
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1' // inject from outer
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1' // inject from outer
+
 }
 
 tasks.named('test') {
