--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "9090:9090"
     volumes:
       - ./gateway/gateway.jar:/app.jar
+      - ./gateway/.env:/.env
+      - ./gateway/servers.yml:/servers.yml
     command: ["java", "-jar", "app.jar"]
     networks:
       - mysql-network
