--- a/Redis/build.gradle
+++ b/Redis/build.gradle
@@ -54,9 +54,10 @@ dependencies {
     // jackson
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.2'
-    testImplementation 'org.mockito:mockito-core:5.17.0'
-    testImplementation 'org.assertj:assertj-core:3.27.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.assertj:assertj-core:3.25.3'
 
     compileOnly 'org.slf4j:slf4j-simple:1.7.36'
     testImplementation 'org.slf4j:slf4j-simple:1.7.36'
