refactor (user): add dependency Common.jar
refactor (user): Common 의존성 추가
fix (user): fix update user logic

--- a/User/build.gradle
+++ b/User/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     // password encoder
     implementation("org.mindrot:jbcrypt:0.4")
 
+    implementation files('libs/Common.jar')
+
 }
 
 tasks.named('test') {
