--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,11 @@ services:
     command: ["java", "-jar", "app.jar"]
     networks:
       - mysql-network
-    mem_limit: 256m
+    mem_limit: 128m
     cpus: 0.2
 
   msa-user:
-    image: eclipse-temurin:21-jdk-jammy
+    image: sourcemation/jdk-21:latest
     container_name: msa-user
     ports:
       - "9091:9091"
@@ -27,11 +27,11 @@ services:
     command: ["java", "-jar", "app.jar"]
     networks:
       - mysql-network
-    mem_limit: 256m
-    cpus: 0.2
+    mem_limit: 300m
+    cpus: 0.35
 
   msa-yacht:
-    image: eclipse-temurin:21-jdk-jammy
+    image: sourcemation/jdk-21:latest
     container_name: msa-yacht
     ports:
       - "9092:9092"
@@ -41,11 +41,11 @@ services:
     command: ["java", "-jar", "app.jar"]
     networks:
       - mysql-network
-    mem_limit: 256m
-    cpus: 0.2
+    mem_limit: 300m
+    cpus: 0.35
 
   msa-part:
-    image: eclipse-temurin:21-jdk-jammy
+    image: sourcemation/jdk-21:latest
     container_name: msa-part
     ports:
       - "9093:9093"
@@ -55,11 +55,11 @@ services:
     command: ["java", "-jar", "app.jar"]
     networks:
       - mysql-network
-    mem_limit: 256m
-    cpus: 0.2
+    mem_limit: 300m
+    cpus: 0.35
 
   msa-calendar:
-    image: eclipse-temurin:21-jdk-jammy
+    image: sourcemation/jdk-21:latest
     container_name: msa-calendar
     ports:
       - "9094:9094"
@@ -69,20 +69,8 @@ services:
     command: ["java", "-jar", "app.jar"]
     networks:
       - mysql-network
-    mem_limit: 256m
-    cpus: 0.2
-
-  msa-nginx:
-    image: lkh8033/nextlevel-nginx:latest
-    container_name: msa-nginx
-    ports:
-      - "9443:9443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
-    networks:
-      - mysql-network
-    mem_limit: 256m
-    cpus: 0.2
+    mem_limit: 300m
+    cpus: 0.35
 
 networks:
   mysql-network:
