--- a/part/src/main/resources/application.yml
+++ b/part/src/main/resources/application.yml
@@ -29,6 +29,12 @@ spring:
           model: "gemini-2.5-flash"
         file:
           model: "gemini-2.5-flash"
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+      username: ${REDIS_USERNAME}
+      password: ${REDIS_PASSWORD}
 
 redis:
   host: ${REDIS_HOST}
