--- a/Gateway/build.gradle
+++ b/Gateway/build.gradle
@@ -68,10 +68,10 @@ dependencies {
 
     implementation 'org.yaml:snakeyaml:2.0' // 이거 필수임?
 
-    testImplementation platform('org.junit:junit-bom:5.10.2')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+    testImplementation 'org.mockito:mockito-core:5.21.0'
 }
 
-test {
+tasks.named('test') {
     useJUnitPlatform()
 }
